--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=1"
+    />
+    <title>Booking Room</title>
   </head>
   <body>
     <script src="./src/index.js"></script>
